update add Mol2Vec and LALas section to molecular_representation.ipynb

--- a/notebooks/molecular_representation.ipynb
+++ b/notebooks/molecular_representation.ipynb
@@ -414,6 +414,23 @@
     "# plot heat map of the simmilarity matrix\n",
     "sns.heatmap(sm[:100,:100])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mol2Vec\n",
+    "Mol2Vec is an approach that represents molecules as continuous vectors in a high-dimensional space, often utilizing techniques from natural language processing, like Word2Vec. It transforms molecular structures into embeddings where similar molecules are located closer in vector space. Mol2Vec captures semantic relationships between molecules and can be used for similarity search and machine learning tasks in cheminformatics and drug discovery."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LALAs\n",
+    "\n",
+    " LALAS is a string-based representations of PHBs molecules that express the annulation pattern of the molecules in term of Antracene (L) and Phenanthrene (A) subuints. There are two levels of LALAs representation so far. The first type uses only capital letters and provides no information about angular annulation directionality. These result in strings of varying lengths composed of \"L\" and \"A\" letters, known as LALA Strings. The second type employs both uppercase \"A\" and lowercase \"a\" to indicate angular annulation directionality, referred to as augmented-LALAS. The augmented-LALAS representation is equivalent to Balaban's code and maintains the same uniqueness and invertibility between names and structures. "
+   ]
   }
  ],
  "metadata": {
