update add homo-lumo Gap Distribution per number of heterocycles

--- a/notebooks/analysis_of_heterocycles.ipynb
+++ b/notebooks/analysis_of_heterocycles.ipynb
@@ -269,6 +269,47 @@
     "fig.suptitle(f\"Color by bblock\")\n",
     "plt.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Impact of Heterocycles on homo-lumo Gap Distribution\n",
+    "\n",
+    "Exploring the influence of heterocycles on the distribution of homo-lumo gaps (gap_corr). Each subplot focuses on a specific number of each heterocycle type (ring).\n",
+    "\n",
+    "For each heterocycle type, the homo-lumo gap distribution is visualized using a histogram, with a bin width of 0.1 and a bin range between 2.8 and 8. The y-axis is scaled to represent probabilities, providing insights into the likelihood of different energy gap values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from func import get_query\n",
+    "\n",
+    "for ring, color in heterocycles_colors.items():\n",
+    "    data = df.query(get_query(ring))\n",
+    "    heterocycles_count = data[ring].unique()\n",
+    "    for i in heterocycles_count[:3]:\n",
+    "        fig, ax = plt.subplots(figsize=(8,2), dpi=300)\n",
+    "        sns.histplot(data=data[data[ring] == i],\n",
+    "                    x = 'gap_corr',\n",
+    "                    color=heterocycles_colors[ring],\n",
+    "                    binwidth=0.1,\n",
+    "                    binrange=(2.8,8),\n",
+    "                    stat='probability'\n",
+    "                    )\n",
+    "        ax.set_xlim(2.8,8)\n",
+    "        #hide y axis\n",
+    "        ax.set_yticks([])\n",
+    "        ax.set_xlabel('')\n",
+    "        ax.set_ylabel('')\n",
+    "        plt.savefig(f'.temp/figures/effect-of-heteorcycles/only_{ring}_{i}.png', dpi=300)\n",
+    "        plt.savefig(f'.temp/figures/effect-of-heteorcycles/only_{ring}_{i}.svg',)\n",
+    "        plt.close()"
+   ]
   }
  ],
  "metadata": {
